src/test/ui/span/wf-method-late-bound-regions.stderr
error[E0597]: `pointer` does not live long enough
  --> $DIR/wf-method-late-bound-regions.rs:31:5
   |
30 |         f2.xmute(&pointer)
   |                   ------- borrow occurs here
31 |     }; //~ ERROR `pointer` does not live long enough
   |     ^ `pointer` dropped here while still borrowed
32 |     println!("{}", dangling);
33 | }
   | - borrowed value needs to live until here

error: aborting due to previous error

